<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Contatti"
            android:textColor="@color/color_left"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/gray"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/Inviaci.la.tua.richiesta"
            android:textColor="@color/color_left"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nome"
                android:textColor="@color/color_left"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:singleLine="true"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:padding="8dp"
                android:background="@drawable/edittext_bg"
                android:textColor="@color/color_left"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Cognome"
                android:textColor="@color/color_left"
                android:textSize="16sp" />

            <EditText
                android:imeOptions="actionNext"
                android:id="@+id/editTextCognome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:singleLine="true"
                android:inputType="text"
                android:maxLines="1"
                android:background="@drawable/edittext_bg"
                android:textColor="@color/color_left"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Email"
                android:textColor="@color/color_left"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:singleLine="true"
                android:maxLines="1"
                android:background="@drawable/edittext_bg"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:textColor="@color/color_left"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Messaggio"
                android:textColor="@color/color_left"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextMessaggio"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_bg"
                android:gravity="left|top"
                android:imeOptions="actionDone"
                android:padding="8dp"
                android:inputType="textMultiLine"
                android:textColor="@color/color_left"
                android:textSize="16sp" />


        </LinearLayout>


        <TextView
            android:textAllCaps = "true"
            android:id = "@+id/contactSubmit"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_margin = "10dp"
            android:background = "@color/color2"
            android:gravity = "center_horizontal"
            android:padding = "10dp"
            android:text = "@string/Inviaci.la.richiesta"
            android:textColor = "@color/white"
            android:textSize = "16sp" />


    </LinearLayout>

</LinearLayout>

