<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_margin="10dp"
                android:id="@+id/infoCrosImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/cros" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textviewInfoTitle"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/AppartieniAlGruppoDei"
            android:textColor="@color/color3"
            android:textSize="18sp" />

        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:text="@string/I.primi.sette.passi.honno.segnato"
            android:textColor="@color/color1" />

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:textAllCaps="true"
                android:id="@+id/textViewIndietro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@color/color2"
                android:gravity="center_horizontal"
                android:text="@string/Indietro"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:textAllCaps="true"
                android:id="@+id/textViewProsegui"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@color/color2"
                android:gravity="center_horizontal"
                android:text="@string/Prosegui"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>