<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/luna_bg"

    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

        <RelativeLayout
            android:id="@+id/proView"
            android:layout_below="@+id/topPanel"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imgReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/logo" />

        </RelativeLayout>

    <EditText
        android:id="@+id/etEmailLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:hint="EMAIL"
        android:maxLines="1"
        android:textColorHint="@color/white"
        android:background="@null"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textSize="15sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@drawable/luna_register_line"
        android:layout_marginTop="10dp"

        />


        <EditText
            android:id="@+id/etPssLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:hint="PASSWORD"
            android:maxLines="1"
            android:textColorHint="@color/white"
            android:background="@null"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="15sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@drawable/luna_register_line"
            android:layout_marginTop="10dp"

            >

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp"
            >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvKeepLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="KEEP ME LOGIN"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:textSize="15sp"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tvLogInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="center"
            android:background="@drawable/luna_reg_bar"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:padding="10dp"

            />
        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/tvFbBtn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                android:gravity="center"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:background="@drawable/luna_twitter_bar"
                android:layout_centerInParent="true"
                android:layout_marginRight="5dp"
                android:padding="10dp"

                />
            <TextView
                android:id="@+id/tvTwittBtn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/twitter"
                android:gravity="center"
                android:background="@drawable/luna_twitter_bar"
                android:layout_centerInParent="true"
                android:layout_marginLeft="5dp"
                android:textSize="10sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="#000000"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/tvPassBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PASSWORD"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="normal"
                android:textColor="@color/white"
                android:layout_centerInParent="true"

                android:padding="5dp"

                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                ></View>

            <TextView
                android:id="@+id/tvRegBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:padding="5dp"
                android:textSize="15sp"
                android:textStyle="normal"
                android:textColor="@color/white"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>